added getUserList endpoint
