# apps/api/internal/pkg/swagger/swagger.yaml
@@ -1,5 +1,21 @@
 basePath: /
 definitions:
+  common.CommonErrorSchema:
+    properties:
+      error:
+        type: string
+    type: object
+  common.CommonPaginationSchema:
+    properties:
+      hasNext:
+        type: boolean
+      page:
+        type: integer
+      pageSize:
+        type: integer
+      totalCount:
+        type: integer
+    type: object
   entities.User:
     properties:
       active:
@@ -36,6 +52,15 @@ definitions:
         description: Valid is true if Time is not NULL
         type: boolean
     type: object
+  users.UserListSchema:
+    properties:
+      data:
+        items:
+          $ref: '#/definitions/entities.User'
+        type: array
+      pagination:
+        $ref: '#/definitions/common.CommonPaginationSchema'
+    type: object
   users.UserSchema:
     properties:
       avatar:
@@ -61,6 +86,30 @@ info:
   version: "1.0"
 paths:
   /v1/users:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 'Page number (default: 1)'
+        in: query
+        name: page
+        type: integer
+      - description: 'Number of items per page (default: 10)'
+        in: query
+        name: pageSize
+        type: integer
+      responses:
+        "200":
+          description: Success
+          schema:
+            $ref: '#/definitions/users.UserListSchema'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.CommonErrorSchema'
+      summary: GEt USer List
+      tags:
+      - User
     post:
       consumes:
       - application/json
@@ -76,6 +125,10 @@ paths:
           description: Created
           schema:
             $ref: '#/definitions/entities.User'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/common.CommonErrorSchema'
       summary: Create User
       tags:
       - User
